--- a/protected/Modules/Admin/Templates/Authors/Edit.html
+++ b/protected/Modules/Admin/Templates/Authors/Edit.html
@@ -1,9 +1,6 @@
 {% extends 'Admin.html' %}
 {% import '/macros/Helpers.twig' as Helpers %}
-
-{% block pagehead %}
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-{% endblock %}
+{% import '/macros/JSBlock.twig' as JS %}
 
 {% block content %}
     <fieldset>
@@ -45,20 +42,5 @@
 
 {% endblock %}
 {% block pagescript %}
-    <script>
-        (function($) {
-            $("#birthday").datepicker({
-                dateFormat: 'dd.mm.yy',
-                prevText: '<i class="fa fa-angle-left"></i>',
-                nextText: '<i class="fa fa-angle-right"></i>',
-                monthNames: [ "Январь","Февраль","Март","Апрель","Май","Июнь","Июль","Август","Сентябрь","Октябрь","Ноябрь","Декабрь" ],
-                monthNamesShort: [ "Янв", "Фев", "Мар", "Апр", "Май", "Июн", "Июл", "Авг", "Сен", "Окт", "Ноя", "Дек" ],
-                dayNamesMin: [ "Вс","Пн","Вт","Ср","Чт","Пт","Сб" ],
-                firstDay: 1,
-                changeMonth: true,
-                changeYear: true,
-                yearRange: "1900:2016"
-            });
-        })(jQuery);
-    </script>
+    {{ JS.datePicker('#birthday') }}
 {% endblock %}
