--- a/protected/Layouts/macros/Helpers.twig
+++ b/protected/Layouts/macros/Helpers.twig
@@ -2,3 +2,45 @@
     {% set title = item.Pk ? 'edit' : 'new' %}
     <legend>{{ desc }} | {{ title }}</legend>
 {% endmacro %}
+
+{% macro formTitle(name, value) %}
+<div class="form-group">
+    <label for="title" class="col-sm-2 control-label">Заголовок</label>
+    <div class="col-sm-10">
+        <input id="title" class="form-control" type="text" name={{ name }} value="{{ value }}">
+    </div>
+</div>
+{% endmacro %}
+
+{% macro formImage(image) %}
+    <div class="form-group">
+        <label for="image" class="col-sm-2 control-label">Картинка</label>
+        <input type="hidden" name="MAX_FILE_SIZE" value="100000">
+        <div class="col-sm-10">
+            {% if image %}
+                <img class="img-thumbnail" src="{{ asset('/Layouts/assets' ~ image) }}" width="50px" height="50px">
+            {% endif %}
+            <input type="file" name="image">
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro formBtnSave(ctrl) %}
+    <div class="btn-group pull-right" role="group">
+        <button class="btn btn-success " type="submit">
+            <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>&nbsp; СОХРАНИТЬ
+        </button>
+        <a class="btn btn-default" href="/admin/{{ ctrl }}/">отмена</a>
+    </div>
+{% endmacro %}
+
+{% macro extraBtns(ctrl) %}
+    <div class="btn-group" role="group">
+        <a class="btn btn-primary btn-sm" href="/admin/{{ ctrl }}/edit/?id=new">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; добавить
+        </a>
+        <a class="btn btn-default btn-sm" href="/admin/{{ ctrl }}/">
+            <span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp; все
+        </a>
+    </div>
+{% endmacro %}
