--- a/protected/Modules/Admin/Templates/Index/Default.html
+++ b/protected/Modules/Admin/Templates/Index/Default.html
@@ -1,5 +1,9 @@
 {% extends 'Admin.html' %}
 
+{% block leftMenu %}
+    {% include 'parts/leftMenu.twig' with {'activeTab': ''} %}
+{% endblock %}
+
 {% block content %}
     <h1>ADMIN panel</h1>
 
