--- a/protected/Modules/Admin/Templates/Menu/Default.html
+++ b/protected/Modules/Admin/Templates/Menu/Default.html
@@ -1,5 +1,9 @@
 {% extends 'Admin.html' %}
 
+{% block leftMenu %}
+    {% include 'parts/leftMenu.twig' with {'activeTab': 'menu'} %}
+{% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="col-xs-12 col-sm-7 col-md-7 col-lg-4">
