--- a/protected/Layouts/macros/Helpers.twig
+++ b/protected/Layouts/macros/Helpers.twig
@@ -12,7 +12,16 @@
 </div>
 {% endmacro %}
 
-{% macro formImage(image) %}
+{% macro formPublishedDate(name, date) %}
+    <div class="form-group">
+        <label for="published" class="col-sm-2 control-label">Дата выпуска</label>
+        <div class="col-sm-10">
+            <input id="published" class="form-control" type="text" name="{{ name }}" value="{{ date | date('d.m.Y') }}" required>
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro formImage(name, image) %}
     <div class="form-group">
         <label for="image" class="col-sm-2 control-label">Картинка</label>
         <input type="hidden" name="MAX_FILE_SIZE" value="100000">
@@ -20,7 +29,7 @@
             {% if image %}
                 <img class="img-thumbnail" src="{{ asset('/Layouts/assets' ~ image) }}" width="50px" height="50px">
             {% endif %}
-            <input type="file" name="image">
+            <input type="file" name="{{ name }}">
         </div>
     </div>
 {% endmacro %}
