--- a/protected/Modules/Admin/Templates/Authors/Default.html
+++ b/protected/Modules/Admin/Templates/Authors/Default.html
@@ -1,5 +1,9 @@
 {% extends 'Admin.html' %}
 
+{% block leftMenu %}
+    {% include 'parts/leftMenu.twig' with {'activeTab': 'authors'} %}
+{% endblock %}
+
 {% block content %}
 
     {% set provider = provider.setPageSize(10) %}
