--- a/protected/Modules/Admin/Templates/Menu/Edit.html
+++ b/protected/Modules/Admin/Templates/Menu/Edit.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <section class="well">
+    <section class="admin-menu">
         <form class="smart-form" method="post" action="/admin/menu/save">
             {% if item.isNew %}
                 <header>Добавление элемента</header>
