--- a/protected/Layouts/Index.html
+++ b/protected/Layouts/Index.html
@@ -2,11 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Minimal web-application based on T4 framework</title>
+  <link rel="shortcut icon" type="image/x-icon" href="{{ asset('/Layouts/assets/favicon.ico') }}" />
+  <title>Русский рок</title>
   {{ publishCss() }}
+  {{ publish('/Layouts/assets') }}
+  {{ publish('/Layouts/Admin/assets') }}
+  <link rel="stylesheet" href="{{ asset('/Layouts/assets/css/bootstrap.css') }}">
+  <link rel="stylesheet" href="{{ asset('/Layouts/assets/css/jquery-ui.min.css') }}">
+  <link rel="stylesheet" href="{{ asset('/Layouts/assets/css/wickedpicker.css') }}">
+  <link rel="stylesheet" href="{{ asset('/Layouts/assets/css/styles.css') }}">
+  <link rel="stylesheet" href="{{ asset('/Layouts/Admin/assets/css/font-awesome.min.css') }}">
+  <style>
+    html {
+      background: url({{ asset('/Layouts/assets/images/logo-bg.jpg') }}) no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+    }
+  </style>
 </head>
 <body>
-{% block content %}{% endblock %}
+<div class="wrapper">
+  {% include 'parts/menu.twig' %}
+
+  <div class="container content-main">
+    {% block content %}{% endblock %}
+  </div>
+  <div class="divider-40"></div>
+</div>
+
+<div class="container-fluid footer">
+  {% block footer %}
+  <footer>All Right reserved</footer>
+  {% endblock %}
+</div>
+
+<script type="text/javascript" src="{{ asset('/Layouts/assets/js/jquery-1.12.0.min.js') }}"></script>
+<script src="{{ asset('/Layouts/assets/js/jquery-ui.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/Layouts/assets/js/bootstrap.min.js') }}"></script>
+<script src="{{ asset('/Layouts/assets/js/masonry.pkgd.min.js') }}"></script>
+
 {{ publishJs() }}
+{% block pagescript %}{% endblock %}
 </body>
 </html>
