--- a/protected/Layouts/macros/Helpers.twig
+++ b/protected/Layouts/macros/Helpers.twig
@@ -36,20 +36,29 @@
 
 {% macro formBtnSave(ctrl) %}
     <div class="btn-group pull-right" role="group">
-        <button class="btn btn-success " type="submit">
+        <a class="btn btn-success " type="submit">
             <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>&nbsp; СОХРАНИТЬ
-        </button>
+        </a>
         <a class="btn btn-default" href="/admin/{{ ctrl }}/">отмена</a>
     </div>
 {% endmacro %}
 
 {% macro extraBtns(ctrl) %}
     <div class="btn-group" role="group">
-        <a class="btn btn-primary btn-sm" href="/admin/{{ ctrl }}/edit/?id=new">
+        <button class="btn btn-primary btn-sm" href="/admin/{{ ctrl }}/edit/?id=new">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; добавить
-        </a>
+        </button>
         <a class="btn btn-default btn-sm" href="/admin/{{ ctrl }}/">
             <span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp; все
         </a>
+    </div>
+{% endmacro %}
+
+{% macro formText(name, text = '') %}
+    <div class="form-group">
+        <label for="lead" class="col-sm-2 control-label">Текст</label>
+        <div class="col-sm-10">
+            <textarea id="lead" class="form-control" rows="3" name="{{ name }}">{{ text }}</textarea>
+        </div>
     </div>
 {% endmacro %}
