--- a/protected/Layouts/parts/menu.twig
+++ b/protected/Layouts/parts/menu.twig
@@ -12,6 +12,15 @@
                         <t4:block path="///Menu" url="{{ item.url }}"/>
                     </div>
                 </ul>
+                <div class="pull-right admin-btns">
+
+                    {% if not app.user %}
+                        <a href="/login/"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
+                    {% else %}
+                        <a href="/admin/"><i class="fa fa-cog" aria-hidden="true"></i></a>
+                        <a href="/logout/"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    {% endif %}
+                </div>
             </div>
 
     </div>
