--- a/protected/Layouts/Index.html
+++ b/protected/Layouts/Index.html
@@ -34,7 +34,7 @@
 
 <div class="container-fluid footer">
   {% block footer %}
-  <footer>All Right reserved</footer>
+  <footer>PHP 2: final Homework. <a href="http://pr-of-it.ru/"><img src="{{ asset('/Layouts/assets/images/profit.png') }}" alt="Академия программирования"></a></footer>
   {% endblock %}
 </div>
 
