--- a/protected/Layouts/assets/css/styles.css
+++ b/protected/Layouts/assets/css/styles.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    overflow: visible;
 }
 
 body {
@@ -56,6 +57,8 @@ body {
 /**     COMMON PARTS    **/
 .news h1,
 .posts h1,
+.albums h1,
+.songs h1,
 .post-one h1 {
     padding-bottom: 10px;
     border-bottom: 1px solid gray;
@@ -213,6 +216,21 @@ body {
     border-right: 1px solid #bbb;
 }
 /*************************************************/
+/*            ALBUMs                             */
+/*************************************************/
+.albums .album {
+    border: 1px dotted darkslategray;
+    margin: 0 0 15px;
+}
+.albums .album .image {
+    padding: 25px;
+}
+.albums .album .table a,
+.songs .table a {
+    padding: 0 5px;
+    color: #666;
+}
+/*************************************************/
 /*            FOOTER                             */
 /*************************************************/
 .container-fluid.footer {
@@ -221,4 +239,7 @@ body {
     text-align: center;
     height: 100px;
     background: #2d2d2d;
+}
+.container-fluid.footer footer {
+    padding-top: 30px;
 }
