--- a/protected/Modules/Admin/Templates/Posts/Edit.html
+++ b/protected/Modules/Admin/Templates/Posts/Edit.html
@@ -17,13 +17,13 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="file" class="col-sm-2 control-label">Картинка</label>
+                <label for="image" class="col-sm-2 control-label">Картинка</label>
                 <input type="hidden" name="MAX_FILE_SIZE" value="100000">
                 <div class="col-sm-10">
                     {% if item.image %}
                         <img class="img-thumbnail" src="{{ asset('/Layouts/assets' ~ item.image) }}" width="50px" height="50px">
                     {% endif %}
-                    <input type="image" name="file">
+                    <input type="file" name="image">
                 </div>
             </div>
             <div class="form-group">
@@ -65,42 +65,47 @@
             <input type="hidden" name="post[__id]" value="{{ item.Pk }}">
         </form>
     </fieldset>
-    <hr>
-    <h3>Комментарии</h3>
-    <table class="table table-striped">
-        <tr>
-            <th>Комментарий</th>
-            <th>Автор</th>
-            <th>Дата публикации</th>
-            <th></th>
-        </tr>
-        {% for item in item.comments %}
-            <tr>
-                <td>{{ item.text }}</td>
-                <td>{{ item.user.name }}</td>
-                <td>{{ item.published | date('d.m.Y') }}</td>
-                <td width="10%">
-                    <div class="btn-group" role="group">
-                        <a class="btn btn-sm btn-primary" href="/admin/comments/edit/?id={{ item.Pk }}">
-                            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-                        </a>
-                        <a class="btn btn-sm btn-danger" href="/admin/comments/delete/?id={{ item.Pk }}">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </a>
-                    </div>
-                </td>
-            </tr>
 
-        {% endfor %}
-    </table>
-    <hr>
-    <div class="btn-group" role="group">
-        <a class="btn btn-primary btn-sm" href="/admin/comments/edit/?id=new">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; добавить комментарий
-        </a>
-        <a class="btn btn-default btn-sm" href="/admin/comments/">
-            <span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp; все комментарии
-        </a>
-    </div>
+    {% if item.Pk %}
+        <hr>
+
+        <h3>Комментарии</h3>
+        <table class="table table-striped">
+            <tr>
+                <th>Комментарий</th>
+                <th>Автор</th>
+                <th>Дата публикации</th>
+                <th></th>
+            </tr>
+            {% for item in item.comments %}
+                <tr>
+                    <td>{{ item.text }}</td>
+                    <td>{{ item.user.name }}</td>
+                    <td>{{ item.published | date('d.m.Y') }}</td>
+                    <td width="10%">
+                        <div class="btn-group" role="group">
+                            <a class="btn btn-sm btn-primary" href="/admin/comments/edit/?id={{ item.Pk }}">
+                                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                            </a>
+                            <a class="btn btn-sm btn-danger" href="/admin/comments/delete/?id={{ item.Pk }}">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+
+            {% endfor %}
+        </table>
+        <hr>
+        <div class="btn-group" role="group">
+            <a class="btn btn-primary btn-sm" href="/admin/comments/edit/?id=new">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; добавить комментарий
+            </a>
+            <a class="btn btn-default btn-sm" href="/admin/comments/">
+                <span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp; все комментарии
+            </a>
+        </div>
+
+    {% endif %}
 
 {% endblock %}
