--- a/protected/Modules/Admin/Templates/Songs/Edit.html
+++ b/protected/Modules/Admin/Templates/Songs/Edit.html
@@ -33,6 +33,14 @@
                     <input id="duration" class="form-control timepicker" type="text" name="song[duration]" value="{{ item.duration | date('H:i:s') }}"/>
                 </div>
             </div>
+            <div class="form-group">
+                <label for="song" class="col-sm-2 control-label">Файл</label>
+                <input type="hidden" name="MAX_FILE_SIZE" value="15000000">
+                <div class="col-sm-10">
+                    <p>{{ item.link }}</p>
+                    <input type="file" name="song">
+                </div>
+            </div>
             <input type="hidden" name="song[__id]" value="{{ item.Pk }}">
             <div class="btn-group pull-right" role="group">
                 <button class="btn btn-success " type="submit">
